Fixed Experience header overflow

--- a/css/style.css
+++ b/css/style.css
@@ -20,6 +20,13 @@
     display: none;
     /* visibility: hidden; */
   }
+
+  .experience {
+    h1 {
+      /* word-break:break-all; */
+      letter-spacing: 0.5rem;
+    }
+  }
 }
 
 @media (max-width: 450px) {
